# ParallelProgrammingPractise

./: README.md
STL_Threads/: CMakeLists.txt
STL_Threads/src/: main.cpp
Thrust/: .gitignore  CMakeLists.txt
Thrust/include/: CudaPractise.h
Thrust/src/: CudaPractise.cu  main.cpp
